feat:update files. Added new func

--- a/index.html
+++ b/index.html
@@ -7,19 +7,41 @@
     <title>momentum</title>
     <link rel="stylesheet" href="styles/style.css">
 
-    <script defer src="scripts/app.js"></script>
+
 </head>
 <body>
+
+<header class="header">
+    <div class="header__body">
+        <div class="header__sound">
+            <img class="sound__btn" src="assets/svg/play-prev.svg" alt="prev">
+            <img class="sound__btn" src="assets/svg/play.svg" alt="prev">
+            <img class="sound__btn" src="assets/svg/play-next.svg" alt="prev">
+        </div>
+        <div class="header__wather">
+            
+        </div>
+
+
+    </div>
+
+
+
+</header>
+
+
     <main class="main">
+    <a href="##" class="slide__btn slider_prev"><img src="assets/svg/slider-prev.svg" alt="slider-prev"></a>
     <div class="time__body">
         <div class="time" id="clock-of-data"></div>
         <div class="data__day" id="data-of-day"></div>
         <div class="greetings" id="gretings-user"><span class="gretings_title">Good</span><p class="gretings_subtitle" id="time-of-date"></p></div>
     </div>
-
+    <a href="##" class="slide__btn slider_next"><img src="assets/svg/slider-next.svg" alt="slider-next"></a>
 
 
 
     </main>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
