feat:added update files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <img class="sound__btn" src="assets/svg/play-next.svg" alt="prev">
         </div>
         <div class="header__wather">
-            
+            <input type="text" class="user__name wather__country" placeholder="ENTER YOUR COUNTRY">
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+            <p></p>
         </div>
 
 
@@ -42,6 +46,12 @@
 
 
     </main>
+
+<footer class="footer">
+    
+</footer>
+
+
     <script src="scripts/app.js"></script>
 </body>
 </html>
