added new files

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <img class="sound__btn" src="assets/svg/play-next.svg" alt="prev">
         </div>
         <div class="header__wather">
-            <input type="text" class="user__name wather__country" placeholder="ENTER YOUR COUNTRY">
-            <img src="" alt="">
-            <p></p>
-            <p></p>
-            <p></p>
+            <input type="text" id="country" class="user__name wather__country" value="Mogilev" placeholder="ENTER YOUR COUNTRY">
+            <img class="wather__img" id="wather-img" src="" alt="wather_img">
+            <p class="weather__subtitle" id="deg"></p>
+            <p class="weather__subtitle" id="wind"></p>
+            <p class="weather__subtitle" id="humidity"></p>
         </div>
 
 
@@ -48,10 +48,11 @@
     </main>
 
 <footer class="footer">
-    
+
 </footer>
 
 
     <script src="scripts/app.js"></script>
+    <script src="scripts/app2.js"></script>
 </body>
 </html>
