--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <header class="header">
     <div class="header__body">
         <div class="header__sound">
-            <img class="sound__btn" id="prev-sound" src="assets/svg/play-prev.svg" alt="prev">
+            <img class="sound__btn p_sound" id="prev-sound" src="assets/svg/play-prev.svg" alt="prev">
             <img class="sound__btn" id="playBtn" src="assets/svg/play.svg" alt="play">
-            <img class="sound__btn" id="next-sound" src="assets/svg/play-next.svg" alt="next">
+            <img class="sound__btn p_sound" id="next-sound" src="assets/svg/play-next.svg" alt="next">
             <audio class="music" src="assets/sounds/AquaCaelestis.mp3"></audio>
             <ul class="playlist_container"></ul>
         </div>
@@ -50,12 +50,18 @@
     </main>
 
 <footer class="footer">
-
+    <svg class="btnquote" xmlns="http://www.w3.org/2000/svg" version="1.1" width="64" height="64" viewBox="0 0 64 64">
+        <title>loop2</title>
+        <path fill="#fff" d="M55.605 10.395c-5.851-6.388-14.26-10.395-23.605-10.395-17.673 0-32 14.327-32 32h6c0-14.359 11.641-26 26-26 7.689 0 14.596 3.339 19.356 8.644l-9.356 9.356h22v-22l-8.395 8.395z"/>
+        <path fill="#fff" d="M58 32c0 14.359-11.641 26-26 26-7.689 0-14.596-3.339-19.356-8.644l9.356-9.356h-22v22l8.395-8.395c5.851 6.389 14.26 10.395 23.605 10.395 17.673 0 32-14.327 32-32h-6z"/>
+        </svg>
+    <div class="quote_body"></div>
 </footer>
 
 
     <script src="scripts/app.js"></script>
     <script src="scripts/app2.js"></script>
+    <script src="scripts/qutes.js"></script>
 
     <script type="module" src="scripts/app3.js"></script>
 </body>
